# C-_Project

./: CMakeLists.txt  README.md
Include/: Camera.h  Mesh.h  Renderer.h  Shader.h  Textures.h
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Textures.cpp  main.cpp  stb_image.cpp
